# Eden2

./: .gitignore  Cargo.toml  REFACTORING_SUMMARY.md
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: adding-new-cards.md  creature-lifecycle-system.md  cross-platform-development.md  design-document.md  ecs-simulation-refactor.md  garden-system.md  individual-sprite-implementation.md  project-structure.md  species-cards.md  svg_creature_visualization.md
scripts/deploy/: deploy.bat  logs.bat  restart.bat  stop.bat
src/: components.rs  constants.rs  lib.rs  main.rs  types.rs
src/core/: card_definitions.rs  game_state.rs  garden_state.rs  mod.rs  simulation.rs  simulation_systems.rs
src/core/systems/: simulation.rs
src/creatures/: creature_component.rs  mod.rs  svg_renderer.rs
src/gameplay/: game_state.rs  mod.rs
src/gameplay/cards/: card.rs  deck.rs  hand.rs  mod.rs
src/gameplay/creatures/: mod.rs
src/gameplay/garden/: garden.rs  mod.rs  resources.rs
src/gameplay/lifecycle/: creature.rs  death.rs  feeding.rs  growth.rs  matter.rs  mod.rs  phases.rs  population.rs  reproduction.rs
src/gameplay/species/: animals.rs  decomposers.rs  fungi.rs  lifecycle_config.rs  mod.rs  plants.rs  species.rs
src/plugins/: mod.rs  svg_rendering_plugin.rs  visualization_plugin.rs
src/rendering/: svg.rs  svg_system.rs
src/systems/: cards.rs  input.rs  mod.rs  rendering.rs  setup.rs  ui.rs
src/ui/: components.rs  layout.rs  mod.rs
src/visualization/: mod.rs
src/web/: index.html
web/: eden2.d.ts  eden2.js  eden2_bg.wasm.d.ts  package.json
(+15 files in other folders)
